<resources>
    <string name="app_name">HiD</string>
    <string name="homeTitle1">Thank you</string>
    <string name="homeTitle2">For</string>
    <string name="homeTitle3">Being Brave</string>
    <string name="meetD">Meet D</string>
    <string name="homeCreateD">Create My D</string>
    <string name="homeGetReady">Get Ready</string>
    <string name="homeBoxBreath">Box Breathing</string>
    <string name="homeDonotBlame">Don\'t Blame me</string>
    <string name="homeTogether">Together</string>
    <string name="homeContactP">Contact People</string>
    <string name="homeShareD">Sharing Forum</string>
    <string name="boxBreathingTitle">Box Breathing</string>

    <!--    Nav Bar-->
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>

    <!--    Log In/Out -->
    <string name="logBtnStartNow">Start Now</string>
    <string name="loginTitle">Do you want log in?</string>
    <string name="logEmail">Email</string>
    <string name="logPassword">Password</string>
    <string name="logForgotPassword">Forgot Password</string>
    <string name="logBtnLogin">Log In</string>
    <string name="logCreateAccount">Create New Account</string>
    <string name="logHint">abc@abc.com</string>

    <!--    Create Account -->
    <string name="CAWelcome">Welcome</string>
    <string name="CAFirstName">First Name</string>
    <string name="CALastName">Last Name</string>
    <string name="CAEmail">Email</string>
    <string name="CAPassword">Password</string>
    <string name="CAConfirmPassword">Confirm Password</string>
    <string name="CABtnSave">Save</string>
    <string name="moveToLogIn">Already having the account, LogIn</string>
    <string name="err_msg_email">Enter a valid email.</string>
    <string name="err_msg_required">Required !!</string>
    <string name="err_msg_password">Enter a valid password with min 6 characters.</string>

    <!--    Reset Password -->
    <string name="RPTitle">Reset Password</string>
    <string name="btnRPUpdate">Update</string>
    <string name="RPLogIn">Go Back to Lon In</string>

    <!--    Do No Blame me Activity-->
    <string name="DoNoBlameTitle">Don\'t Blame me</string>
    <string name="DoNotBSaveBtn">Save</string>
    <string name="DoNotBSetNotificationBtn">Set Notification</string>
    <string name="txtSubTitle1">SITUATION</string>
    <string name="txtSubDescribe1">Describe the situation \n(up to 4 lines)</string>
    <string name="txtSubTitle2">SOLUTION</string>
    <string name="txtSubDescribe2">What would you do to comfort your friend if they were in the same situation as you? \n(up to 10 lines)</string>

    <!--    Create My D-->
    <string name="createMyDTitle">Create My D</string>
    <string name="btnSaveCreated">Save</string>
    <string name="btnShareCreated">Share</string>

    <!--    Contact People  -->
    <string name="CPTitle">Contact People</string>
    <string name="CPSubTitle">SHALL WE HAVE A LITTLE MORE COURAGE?</string>
    <string name="CPDescribe">How about texting or calling three friends or family today?\nLess than three people is fine.\nTry to say hello to at least one person.\nYour day will be FRESH!</string>
    <string name="CPBtnText">Text</string>
    <string name="CPBtnCall">Call</string>

    <!--    D Board -->
    <string name="DBTitle">Sharing Forum</string>
    <string name="DBBtnUpload">Upload</string>

    <!--    Share Board-->
    <string name="SFTitle">Title Example</string>
    <string name="SFName">Name</string>
    <string name="SFDate">2023-01-01</string>
    <string name="SFNumHeader">No</string>
    <string name="SFTitleHeader">Title</string>
    <string name="SFNameHeader">Name</string>
    <string name="SFDateHeader">Date</string>
    <string name="SFReactionHeader">Reaction</string>

    <!--    update my D -->
    <string name="UPDMainTitle">Share My D</string>
    <string name="UPDNameLabel">Name</string>
    <string name="UPDName">Name Here</string>
    <string name="UPDTitleLabel">Title</string>
    <string name="UPDTitle">Title Here</string>
    <string name="UPDDateLabel">Date</string>
    <string name="UPDDate">Date Here</string>
    <string name="UPDContentsLabel">Contents</string>
    <string name="UPDContents">Contents Here</string>
    <string name="UPDImageLabel">Image</string>
    <string name="UPDImgUpload">Upload Image</string>
    <string name="btnUPDSave">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>