<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/greenback"
    tools:context=".dforum.UploadDForumActivity">

    <TextView
        android:id="@+id/txtUPDMainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/UPDMainTitle"
        android:textColor="@color/deepGreen"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <ImageView-->
<!--        android:id="@+id/imgUPDBack"-->
<!--        android:layout_width="380dp"-->
<!--        android:layout_height="540dp"-->
<!--        android:layout_marginTop="4dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.481"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/txtUPDMainTitle"-->
<!--        app:srcCompat="@drawable/sharemydback" />-->

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="350dp"
        android:layout_height="450dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUPDMainTitle">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <TextView
                android:id="@+id/txtUPDNameLable"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@color/tableHeaderGreen"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/UPDNameLabel"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtUPDName"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/UPDName"
                android:textSize="16dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <TextView
                android:id="@+id/txtUPDTitleLabel"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@color/tableHeaderGreen"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/UPDTitleLabel"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtUPDTitle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/UPDTitle"
                android:textSize="16dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <TextView
                android:id="@+id/txtUPDDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@color/tableHeaderGreen"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/UPDDateLabel"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtUPDDate"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/UPDDate"
                android:textSize="16dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <TextView
                android:id="@+id/txtUPDContentsLabel"
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:background="@color/tableHeaderGreen"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="12dp"
                android:text="@string/UPDContentsLabel"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edittxtUPDContents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/UPDContents"
                android:textStyle="italic"
                android:maxLines="8"
                android:ems="10"
                android:paddingRight="3dp"
                android:paddingLeft="5dp"
                android:gravity="start|top"
                android:background="@null"
                android:inputType="textMultiLine" />

            <!--            <TextView-->
<!--                android:id="@+id/txtUPDContents"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="90dp"-->
<!--                android:layout_marginLeft="10dp"-->
<!--                android:paddingTop="5dp"-->
<!--                android:text="@string/UPDContents"-->
<!--                android:textSize="16dp" />-->
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <TextView
                android:id="@+id/txtUPDImgLabel"
                android:layout_width="wrap_content"
                android:layout_height="170dp"
                android:background="@color/tableHeaderGreen"
                android:paddingLeft="20dp"
                android:paddingTop="12dp"
                android:paddingRight="20dp"
                android:text="@string/UPDImageLabel"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/UPDImg"
                android:layout_width="243dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/examplepic" />


        </TableRow>
    </TableLayout>

<!--    <Button-->
<!--        android:id="@+id/btnUPDUpload"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="40dp"-->
<!--        android:layout_marginLeft="10dp"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:background="@drawable/btn_bg_blue"-->
<!--        android:text="@string/UPDImgUpload"-->
<!--        android:textColor="@color/white"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.5"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/imgUPDBack" />-->

    <Button
        android:id="@+id/btnUPDUpload"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:background="@drawable/btn_bg_green"
        android:text="@string/UPDImgUpload"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <Button
        android:id="@+id/btnUPDSave"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_bg_green"
        android:text="@string/btnUPDSave"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUPDUpload" />


</androidx.constraintlayout.widget.ConstraintLayout>