<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:background="@color/backLightBlue">

    <TextView
        android:id="@+id/txtSFNumH"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.1"
        android:gravity="center_vertical"
        android:layout_marginLeft="3dp"
        android:text="1"
        android:textColor="@color/deepBlue" />

    <TextView
        android:id="@+id/txtSFTitleH"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="01"
        android:gravity="center_vertical"
        android:text="@string/SFTitle"
        android:textColor="@color/deepBlue" />

    <TextView
        android:id="@+id/txtSFNameH"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.1"
        android:textSize="13sp"
        android:gravity="center_vertical"
        android:text="@string/SFName"
        android:textColor="@color/deepBlue" />

    <TextView
        android:id="@+id/txtSFDateH"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.05"
        android:gravity="center_vertical"
        android:text="@string/SFDate"
        android:textColor="@color/deepBlue"
        android:textSize="13sp" />

    <ImageView
        android:id="@+id/imgSFHeart"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_weight="0.1"
        android:gravity="center_vertical"
        android:layout_marginRight="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        app:srcCompat="@drawable/heartline" />

    <ImageView
        android:id="@+id/imgSFStar"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_weight="0.1"
        android:gravity="center_vertical"
        android:layout_marginRight="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        app:srcCompat="@drawable/starline" />
</LinearLayout>